# lambda

./: CMakeLists.txt  README.md
cmake/recipes/: require_melon.cmake
conda/: environment_linux.yaml  environment_osx.yaml  meta.yaml
copts/: carbin_generated_copts.cmake
example/: CMakeLists.txt  build_disk_index.cc  build_memory_index.cc  search_disk_index.cc  search_memory_index.cc  search_memory_index_dynamic.cc
lambda/: CMakeLists.txt  ann_index.cc  ann_index.h
lambda/common/: doubly_buffered_data.h  math_utils.cc  math_utils.h  memory.h  natural_number_map.cc  natural_number_map.h  natural_number_set.cc  natural_number_set.h  roaring.c  roaring.h  roaring.hh  simd_utils.h  vector_distance.cc  vector_distance.h
lambda/dbd/: dbd_index.cc  dbd_index.h
lambda/faiss/: config.h  faiss_binary_index.cc  faiss_binary_index.h  faiss_index.cc  faiss_index.h
lambda/graph/: aligned_file_reader.h  aux_utils.cc  aux_utils.h  binary_file.h  cached_io.h  concurrent_queue.h  cosine_similarity.h  index.cc  index.h  linux_aligned_file_reader.cc  linux_aligned_file_reader.h  locking.h  neighbor.h  parameters.h  partition_and_pq.cc  partition_and_pq.h  percentile_stats.h  pq_flash_index.cc  pq_flash_index.h  pq_table.h  utils.cc  utils.h
lambda/hnsw/: hnswalg.h  hnswlib.h  hnswlib_index.cc  hnswlib_index.h
lambda/proto/: types.pb.h  types.proto
lambda/tools/: CMakeLists.txt  bin_to_fvecs.cc  bin_to_tsv.cc  calculate_recall.cc  compute_groundtruth.cc  create_disk_layout.cc  float_bin_to_int8.cc  fvecs_to_bin.cc  fvecs_to_bvecs.cc  gen_random_slice.cc  generate_pq.cc  int8_to_float.cc  int8_to_float_scale.cc  ivecs_to_bin.cc  merge_shards.cc  partition_data.cc  partition_with_ram_budget.cc  rand_data_gen.cc  simulate_aggregate_recall.cc  tsv_to_bin.cc  uint32_to_uint8.cc  uint8_to_float.cc  vector_analysis.cc
